# xmlrfc2md

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  xml2md.py  xmlrfc2md.py
src/xmlrfc2md/: xmlrfc2md.py
test/: driver.sh
tests/: process.sh
